@@ -6,8 +6,10 @@ mdadm (3.1.5-1~unreleased.0) UNRELEASED; urgency=low
   * Fix checkarray script so that it does not die after scheduling the first
     device when there is no scheduling class specified; thanks to Mario
     'BitKoenig' Holbe (closes: #611627).
+  * Do not include DEVICE line in generated configs but use the built-in value
+    by default (closes: #604702).
 
- -- martin f. krafft <madduck@debian.org>  Mon, 31 Jan 2011 14:48:56 +0100
+ -- martin f. krafft <madduck@debian.org>  Mon, 31 Jan 2011 14:58:22 +0100
 
 mdadm (3.1.4-1+8efb9d1) unstable; urgency=low
 
